[package]
name = "carcaro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33.0", features = ["full"]}
warp = "0.3.6"
reqwest = { version = "0.11", features = ["json"]}
serde = {version = "1.0", features= ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "migrate", "postgres"]}
