[package]
name = "carcaro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33.0", features = ["full"]}
warp = "0.3.6"
reqwest = { version = "0.11", features = ["json"]}
serde = {version = "1.0", features= ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "migrate", "postgres"]}
image = "0.24.7"
azure_storage_blobs = "0.18.0"
azure_core = "0.18.0"
azure_storage = "0.18.0"
futures = "0.3.30"
time = "0.3.31"
natord = "1.0.9"
walkdir = "2.4.0"
rayon = "1.8.0"
palette = "0.7.1"
pwhash = "1"
colorsys = "0.6.7"